# pytrek

./: README.md  main.py  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst  modules.rst  pytrek.rst  requirements.txt
src/docs/source/: conf.py
src/pytrek/: enterprise.py  klingon.py  vulcan.py
src/trek/: enterprise.py
