[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytrek"
version = "1.0.0"
authors = [
  { name="Ed", email="ed@example.com" },
]
description = "To boldly go where no one has gone before!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/edhartnett/pytrek"
Issues = "https://github.com/pypa/sampleproject/issues"